# scrath-llm

./: LICENSE  Lab_1_summarize_dialogue_Copy1.ipynb  Lab_2_fine_tune_generative_ai_model.ipynb  README.md  ingest.py  main.py  notebook.ipynb  pyproject.toml  rag_ingext.ipynb  sqlite-ingest.ipynb
